fix pagination not showing which page, and style changes

--- a/src/style1.css
+++ b/src/style1.css
@@ -1,3 +1,7 @@
+html {
+    background-color: rgb(75, 75, 75);
+}
+
 .search-bar-container {
     display: flex;
     align-items: center;
@@ -10,12 +14,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+    font-size: xx-large;
+}
+
+.search-bar > form > button {
+    background-color: rgb(10,10,10);
+    color: white;
+    font-family: comic sans;
+    border: none;
+}
+
+.search-bar > form > input {
+    background-color: rgb(25,25,25);
+    color: white;
+    border: none;
+}
+
+.results-status {
+    display: flex;
+    justify-content:center;
+    font-size: 32px;
+    color: rgb(255, 79, 79);
 }
 
 .result {
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
+    background-color: rgb(150, 150, 150);
     margin-top: 8px;
     margin-bottom: 10px;
 }
@@ -37,6 +64,10 @@
 .result-img-container > img {
     height: 200px;
     padding: 0%;
+}
+
+.pagination > .selected {
+    background-color: aqua;
 }
 
 .pagination > li {
